--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -310,19 +310,17 @@ input,textarea,select{
   transform: rotate(-45deg);
   top: 0;
 }
-.aside .nav{
+.nav{
   list-style: none;
   margin: 80px 0;
   padding: 0;
 }
-.aside .nav li{
+.nav li{
   display: block;
 }
-.aside .nav li a{
-  font-size: 16px;
+.nav li a{
   font-weight: 600;
   color: #302e4d;
-  text-decoration: none;
   line-height: 45px;
   display: block;
   border-bottom: 1px solid #e8dfec;
@@ -330,13 +328,13 @@ input,textarea,select{
   transition: all 0.3s ease;
   text-transform: capitalize;
 }
-.aside .nav li a:not(.active):hover{
+.nav li a:not(.active):hover{
   padding-left: 5px;
 }
-.aside .nav li a .fa{
+.nav li a .fa{
   margin-right: 5px;
 }
-.aside .copyright-text{
+.copyright-text{
   font-size: 13px;
   color: #7d7d7d;
 }
