Fix: Fixed AboutUs Heading

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -392,20 +392,16 @@ footer small{
 
 
 /* About Section */
-.about .about-content{
-  flex: 0 0 100%;
-  -ms-flex: 0 0 100%;
-  max-width: 100%;
-}
+
 .about .about-content .about-text{
   flex: 0 0 100%;
   -ms-flex: 0 0 100%;
   max-width: 100%;
 }
-.about .about-content .about-text h3{
+.about-text h3{
   font-size: 24px;
   margin-bottom: 15px;
-  font-weight: 700;
+  color: #e40017;
 }
 .about .about-content .about-text p{
   font-size: 16px;
